--- a/JS-Day-3/index.html
+++ b/JS-Day-3/index.html
@@ -9,6 +9,23 @@
     
     Q1. Reverse the array using push and pop method.
 
+    task
+    Q2.remove all negative numbers from an array.
+    let arr=[5,-3,16,-11,-7,8]
+    result: [5,16,8]
+
+    Q3. check if array is palindrome or not.
+
+
+    73
+    294
+    327
+    301
+    319
+
+
+
+
     <script src="./script.js"></script>
 </body>
 </html>
