--- a/JS-day-5/index.html
+++ b/JS-day-5/index.html
@@ -8,6 +8,8 @@
 <body>
 
 
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, aut! Minima commodi libero quia similique magnam inventore consequatur corporis voluptatem.</h1>
+
     Types of function :
     1. regular function
     2. arrow function
